--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Py-networking by alliedtelesis</title>
+    <title>Py-Networking by alliedtelesis</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,54 +15,36 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Py-networking</h1>
+        <a href="http://www.alliedtelesis.com"><img src="images/logo.png"/></a>
         <p></p>
-
-        <p class="view"><a href="https://github.com/alliedtelesis/py-networking">View the Project on GitHub <small>alliedtelesis/py-networking</small></a></p>
-
-
-        <ul>
-          <li><a href="https://github.com/alliedtelesis/py-networking/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/alliedtelesis/py-networking/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/alliedtelesis/py-networking">View On <strong>GitHub</strong></a></li>
-        </ul>
+        <p class="view"><a href="https://github.com/alliedtelesis/py-networking">View the Project on GitHub</a></p>
+        <p class="view"><a href="http://docs.py-networking.com">Documentation</a></p>
+        <p></p>
+        <p class="View"><a href='https://travis-ci.org/alliedtelesis/py-networking'><img src="https://travis-ci.org/alliedtelesis/py-networking.svg?branch=develop"></p>
+        <p class="View"></p><a href='https://coveralls.io/r/alliedtelesis/py-networking?branch=develop'><img src='https://coveralls.io/repos/alliedtelesis/py-networking/badge.png?branch=develop' alt='Coverage Status' /></a></p>
+        <p class="View"></p><a href='http://badge.fury.io/py/py-networking'><img src='https://badge.fury.io/py/py-networking.svg' alt='Coverage Status' /></a></p>
       </header>
       <section>
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+        <h3>Welcome to Py-Networking</h3>
+        <p>Py-Networking (PN) is a python library that provides a new way to interact and configure your networking devices.
+            PN abstract the physical device and provides to the user an uniform API that does not depends from the specific
+            device configuration or configuration syntax. PN does not emulate features that device maybe missing but if two
+            different devices implement a specific feature, this is exposed to the user in the same way.
+        </p>
+        <h3>Mailing List</h3>
+        <p>
+            User's mailing list can be
+            <a href="https://groups.google.com/forum/?hl=en#!forum/py-networking-users">browsed</a> or
+            <a href="mailto:py-networking-users@googlegroups.com">posted</a> after joining it.
+        </p>
+        <h3>Notice</h3>
+        <p>
+            Py-Networking is at early stages of development. You are free to look around but we do not provide support at the
+            moment and the library can go throughout a significant changes and backward compatibility cannot be guaranteed.
+        </p>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/alliedtelesis">alliedtelesis</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p>© 2014, Allied Telesis, Inc. All rights reserved.</p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
